force-app/main/default/objects/Hearing__c/fields/Meeting_Type_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_Other_Text__c</fullName>
    <label>Meeting Type Other Text</label>
    <type>TextArea</type>
</CustomField>