force-app/main/default/objects/Hearing__c/fields/Minutes_to_Write_Findings__c.field-meta.xml
<CustomField>
    <fullName>Minutes_to_Write_Findings__c</fullName>
    <description>Length of minutes to write Findings</description>
    <label>Length of Minutes to Write Findings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>