force-app/main/default/objects/Hearing__c/fields/MWVR_Interest__c.field-meta.xml
<CustomField>
    <fullName>MWVR_Interest__c</fullName>
    <label>MWVR-Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>