force-app/main/default/objects/Hearing__c/fields/MWVR_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>MWVR_Liquidated_Damages__c</fullName>
    <label>MWVR-Liquidated Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>