force-app/main/default/objects/Hearing__c/fields/Number_of_Days_to_Conference__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Conference__c</fullName>
    <formula>If(CONTAINS(RecordType.DeveloperName, "Conference"),(DATEVALUE(Meeting_Start_Date_Time__c ) - (Case__r.Date_of_Docket__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Conference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>