force-app/main/default/objects/Hearing__c/fields/Number_of_Days_to_Dismissal__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Dismissal__c</fullName>
    <formula>((Case__r.Case_Closed_Date__c ) - (Case__r.Date_of_Docket__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Dismissal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>