force-app/main/default/objects/Hearing__c/fields/Number_of_Days_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Resolution__c</fullName>
    <description>Formula to calculate difference between the Date of Docket and Resolution Date on a Case.</description>
    <formula>( ( Case__r.Resolution_Date__c ) - ( Case__r.Date_of_Docket__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>