force-app/main/default/objects/Hearing__c/fields/Number_of_Hours_to_Draft_Determination__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_to_Draft_Determination__c</fullName>
    <label>Number of Hours to Draft Determination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>