force-app/main/default/objects/Hearing__c/fields/ODA_Decision_Generated__c.field-meta.xml
<CustomField>
    <fullName>ODA_Decision_Generated__c</fullName>
    <formula>ODA_Decision_Generated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Decision Document Generated</label>
    <type>Date</type>
</CustomField>