force-app/main/default/objects/Hearing__c/fields/Original_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Hearing_Date__c</fullName>
    <label>Original Meeting Date</label>
    <type>DateTime</type>
</CustomField>