force-app/main/default/objects/Hearing__c/fields/OT_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>OT_Liquidated_Damages__c</fullName>
    <label>OT- Liquidated Damages,</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>