force-app/main/default/objects/Hearing__c/fields/OT_Unpaid_Wages__c.field-meta.xml
<CustomField>
    <fullName>OT_Unpaid_Wages__c</fullName>
    <label>OT- Unpaid Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>