force-app/main/default/objects/Hearing__c/fields/Other_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount__c</fullName>
    <label>Other-Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>