force-app/main/default/objects/Hearing__c/fields/Other_Cured_Specify__c.field-meta.xml
<CustomField>
    <fullName>Other_Cured_Specify__c</fullName>
    <label>Other Cured - Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>