force-app/main/default/objects/Hearing__c/fields/Other_Document_s_Sent__c.field-meta.xml
<CustomField>
    <fullName>Other_Document_s_Sent__c</fullName>
    <description>Field to capture what other documents were sent via certified mail or service by mail; for the WCA 66 output.</description>
    <label>Other Document(s) Sent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>