force-app/main/default/objects/Hearing__c/fields/OTVR_Interest__c.field-meta.xml
<CustomField>
    <fullName>OTVR_Interest__c</fullName>
    <label>OTVR-Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>