force-app/main/default/objects/Hearing__c/fields/OUW_Interest__c.field-meta.xml
<CustomField>
    <fullName>OUW_Interest__c</fullName>
    <label>OUW - Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>