force-app/main/default/objects/Hearing__c/fields/Plaintiff_Only_Attended__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Only_Attended__c</fullName>
    <inlineHelpText>Indicate if only the plaintiff/claimant/employee attended</inlineHelpText>
    <label>Plaintiff Only?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>