force-app/main/default/objects/Hearing__c/fields/RCI_Sr_Deputy_Approval__c.field-meta.xml
<CustomField>
    <fullName>RCI_Sr_Deputy_Approval__c</fullName>
    <label>RCI Sr. Deputy Approval</label>
    <type>Date</type>
</CustomField>