force-app/main/default/objects/Hearing__c/fields/Referral_Decision_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Referral_Decision_Deadline__c</fullName>
    <label>Referral Decision Deadline</label>
    <type>Date</type>
</CustomField>