force-app/main/default/objects/Hearing__c/fields/Secondary_Subsequent2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subsequent2__c</fullName>
    <label>Secondary / Subsequent2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>