force-app/main/default/objects/Hearing__c/fields/Small_Emp_Cure_Attorneys_Fees_and_Costs__c.field-meta.xml
<CustomField>
    <fullName>Small_Emp_Cure_Attorneys_Fees_and_Costs__c</fullName>
    <label>Small Emp Cure Attorneys’ Fees and Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>