force-app/main/default/objects/Hearing__c/fields/SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>SMS_Text__c</fullName>
    <formula>Record_Type_Name__c &amp;" "&amp;text(Status__c) &amp;" "&amp;$Label.for &amp;" "&amp;text(Meeting_Start_Date__c )&amp;" "&amp;Meeting_Start_Time__c &amp; " "&amp;$Label.which_is_a_an &amp;" "&amp;text(In_Person_Remote_Meeting__c )&amp;" meeting"&amp;BR()&amp;IF(ISPICKVAL(In_Person_Remote_Meeting__c,"In Person" ), WCA_Office__r.Name &amp;","&amp; WCA_Office__r.Office_Address_Formula__c ,IF(
OR(ISPICKVAL(In_Person_Remote_Meeting__c,"Phone/Remote" ),ISPICKVAL(In_Person_Remote_Meeting__c,"Video" ))
,text(Meeting_Location__c) ,""))</formula>
    <label>SMS Text</label>
    <type>Text</type>
</CustomField>