force-app/main/default/objects/Hearing__c/fields/Spanish_Date__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Date__c</fullName>
    <formula>Text(DAY( TODAY() ))+' '+
CASE( MONTH( TODAY() ),
1, "enero",
2, "febrero",
3, "marzo",
4, "abril",
5, "mayo",
6, "junio",
7, "julio",
8, "agosto",
9, "septiembre",
10, "octubre",
11, "noviembre",
12, "diciembre",
"")
+' '+ Text(YEAR( TODAY() ))</formula>
    <label>Spanish Date</label>
    <type>Text</type>
</CustomField>