force-app/main/default/objects/Hearing__c/fields/Specify_Status__c.field-meta.xml
<CustomField>
    <fullName>Specify_Status__c</fullName>
    <label>Specify Status</label>
    <type>TextArea</type>
</CustomField>