force-app/main/default/objects/Hearing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Withdrawn</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Continuance Rejected</fullName>
            </value>
            <value>
                <fullName>Continuance Requested</fullName>
            </value>
            <value>
                <fullName>Continued</fullName>
            </value>
            <value>
                <fullName>Deny License Renewal</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Dismissed-Def FTA</fullName>
            </value>
            <value>
                <fullName>Dismissed–Div FTA</fullName>
            </value>
            <value>
                <fullName>Failure to Appear</fullName>
            </value>
            <value>
                <fullName>Meeting Approved</fullName>
            </value>
            <value>
                <fullName>Meeting Rejected</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Off Calendar</fullName>
            </value>
            <value>
                <fullName>Paid Pre-Hearing</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Referred to Hearing - Claimant only appeared</fullName>
            </value>
            <value>
                <fullName>Referred to Hearing - No Settlement</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Revoke License</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Settled Pre-Hearing</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Resolved - Prehearing</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>