force-app/main/default/objects/Hearing__c/fields/Uploaded_the_Preliminary_Cure_Determinat__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_the_Preliminary_Cure_Determinat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uploaded the Preliminary Cure Determination document in Upload PAGA Documents tab in Case Management (it is required)</description>
    <inlineHelpText>Uploaded the Preliminary Cure Determination document in Upload PAGA Documents tab in Case Management (it is required)</inlineHelpText>
    <label>Uploaded the Preliminary Cure Determinat</label>
    <type>Checkbox</type>
</CustomField>