force-app/main/default/objects/Hearing__c/fields/Verified_Cure__c.field-meta.xml
<CustomField>
    <fullName>Verified_Cure__c</fullName>
    <label>Verified Cure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum Wage-Verified</fullName>
            </value>
            <value>
                <fullName>Overtime-Verified</fullName>
            </value>
            <value>
                <fullName>Meal and rest breaks-Verified</fullName>
            </value>
            <value>
                <fullName>Other Unpaid Wages-Verified</fullName>
            </value>
            <value>
                <fullName>Reimbursement of employee expenses-Verified</fullName>
            </value>
            <value>
                <fullName>Indemnification of employees by employer (Labor Code §2800)-Verified</fullName>
            </value>
            <value>
                <fullName>Other-Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>