force-app/main/default/objects/Hearing__c/fields/Video_Meeting_Information__c.field-meta.xml
<CustomField>
    <fullName>Video_Meeting_Information__c</fullName>
    <description>This is used to get Meeting ID and Passcode.</description>
    <inlineHelpText>Copy and paste only the Meeting ID and Passcode here.</inlineHelpText>
    <label>Video Meeting ID and Passcode</label>
    <type>TextArea</type>
</CustomField>