force-app/main/default/objects/Hearing__c/fields/Video_Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_Meeting_URL__c</fullName>
    <description>This field is used to get the video meeting URL.</description>
    <inlineHelpText>Copy and paste only the hyperlink to the meeting here.</inlineHelpText>
    <label>Video Meeting URL</label>
    <type>Url</type>
</CustomField>