force-app/main/default/objects/Hearing__c/fields/VRI_Other_Amount__c.field-meta.xml
<CustomField>
    <fullName>VRI_Other_Amount__c</fullName>
    <label>VRI-Other-Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>