force-app/main/default/objects/Hearing__c/fields/WCA75F_Ready__c.field-meta.xml
<CustomField>
    <fullName>WCA75F_Ready__c</fullName>
    <formula>IF ((RecordType.DeveloperName = "BOFE_Hearing") &amp;&amp;  (ISPICKVAL (Status__c, "Completed")),"WCA75F","not ready")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WCA75F Ready</label>
    <type>Text</type>
</CustomField>