force-app/main/default/objects/Hearing__c/recordTypes/BOFE_Conference.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Conference</fullName>
    <active>true</active>
    <label>BOFE Conference</label>
</RecordType>