force-app/main/default/objects/Hearing__c/recordTypes/Cure_Conference.recordType-meta.xml
<RecordType>
    <fullName>Cure_Conference</fullName>
    <active>true</active>
    <label>Cure Conference</label>
</RecordType>