force-app/main/default/objects/Hearing__c/recordTypes/Cure_Hearing.recordType-meta.xml
<RecordType>
    <fullName>Cure_Hearing</fullName>
    <active>true</active>
    <label>Cure Hearing</label>
</RecordType>