force-app/main/default/objects/Hearing__c/recordTypes/Garment_Hearing.recordType-meta.xml
<RecordType>
    <fullName>Garment_Hearing</fullName>
    <active>true</active>
    <label>Garment Hearing</label>
</RecordType>