force-app/main/default/objects/Hearing__c/recordTypes/JEU_Hearing.recordType-meta.xml
<RecordType>
    <fullName>JEU_Hearing</fullName>
    <active>true</active>
    <label>JEU Hearing</label>
</RecordType>